--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,13 @@ services:
       - vhost.d:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    networks:
+      - frontend
     logging:
       driver: ${NGINX_WEB_LOG_DRIVER:-json-file}
       options:
-        max-size: ${NGINX_WEB_LOG_MAX_SIZE:-2m}
-        max-file: ${NGINX_WEB_LOG_MAX_FILE:-4}
+        max-size: ${NGINX_WEB_LOG_MAX_SIZE:-1m}
+        max-file: ${NGINX_WEB_LOG_MAX_FILE:-2}
 
   letsencrypt-companion:
     container_name: letsencrypt-companion
@@ -33,8 +35,18 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     depends_on:
       - nginx_proxy
+    logging:
+      driver: ${LETS_LOG_DRIVER:-json-file}
+      options:
+        max-size: ${LETS_WEB_LOG_MAX_SIZE:-1m}
+        max-file: ${LETS_WEB_LOG_MAX_FILE:-2}
 
 volumes:
   certs:
   vhost.d:
   html:
+
+networks:
+  frontend:
+    external:
+      name: frontend
